# linapple

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  Makefile
.github/workflows/: build.yml
cmake/: ConvertXPM.cmake
res/: font.xpm  icon.xpm  linapple.conf
scripts/: run_cpu_tests.sh
src/Debugger/: Debug.cpp  Debug.h  Debugger_Assembler.cpp  Debugger_Assembler.h  Debugger_Bookmarks.cpp  Debugger_Bookmarks.h  Debugger_Breakpoints.cpp  Debugger_Breakpoints.h  Debugger_Cmd_Benchmark.cpp  Debugger_Cmd_CPU.cpp  Debugger_Cmd_Config.cpp  Debugger_Cmd_Disk.cpp  Debugger_Cmd_Flags.cpp  Debugger_Cmd_Output.cpp  Debugger_Cmd_Video.cpp  Debugger_Cmd_Window.cpp  Debugger_Cmd_Window.h  Debugger_Cmd_ZeroPage.cpp  Debugger_Color.cpp  Debugger_Color.h  Debugger_Commands.cpp  Debugger_Console.cpp  Debugger_Console.h  Debugger_DisassemblerData.cpp  Debugger_DisassemblerData.h  Debugger_Display.cpp  Debugger_Display.h  Debugger_Help.cpp  Debugger_Help.h  Debugger_Memory.cpp  Debugger_Memory.h  Debugger_Parser.cpp  Debugger_Parser.h  Debugger_Range.cpp  Debugger_Range.h  Debugger_Symbols.cpp  Debugger_Types.h  Debugger_View_Code.cpp  Debugger_View_Console.cpp  Debugger_View_Memory.cpp  (+1 more)
src/apple2/: 6821.cpp  6821.h  AY8910.cpp  AY8910.h  CPU.cpp  CPU.h  Clock.cpp  Disk.cpp  Disk.h  DiskCommands.h  DiskError.h  DiskFTP.h  DiskFormatDriver.h  DiskGCR.cpp  DiskGCR.h  DiskImage.cpp  DiskImage.h  DiskLoader.cpp  DiskLoader.h  Harddisk.cpp  Harddisk.h  Joystick.cpp  Joystick.h  Keyboard.cpp  Keyboard.h  Memory.cpp  Memory.h  Mockingboard.cpp  Mockingboard.h  MouseInterface.cpp  MouseInterface.h  ParallelPrinter.cpp  ParallelPrinter.h  Riff.cpp  Riff.h  SSI263Phonemes.h  SaveState.cpp  SaveState.h  SerialComms.cpp  SerialComms.h  (+12 more)
src/apple2/formats/: DoDriver.cpp  DoDriver.h  IieDriver.cpp  IieDriver.h  Nb2Driver.cpp  Nb2Driver.h  NibDriver.cpp  NibDriver.h  PoDriver.cpp  PoDriver.h  Woz2Driver.cpp  Woz2Driver.h
src/core/: Common.cpp  Common.h  Common_Globals.h  LinAppleCore.cpp  LinAppleCore.h  Log.cpp  Log.h  Peripheral.cpp  Peripheral.h  Peripheral_Internal.cpp  Peripheral_Internal.h  ProgramLoader.cpp  ProgramLoader.h  Registry.cpp  Registry.h  Util_Path.h  Util_Text.h  asset.cpp  asset.h
src/frontends/common/: AppArgs.cpp  AppArgs.h  AppConfig.h  AppController.cpp  AppController.h  AppEnvironment.cpp  AppEnvironment.h
src/frontends/headless/: Headless_Path.cpp  Main.cpp  Stubs.cpp
src/frontends/sdl3/: DiskChoose.cpp  DiskFTP.cpp  DiskSelect.cpp  DiskUI.cpp  DiskUI.h  Frame.cpp  Frame.h  Frontend.h  Harddisk.cpp  JoystickFrontend.cpp  JoystickFrontend.h  Keyboard.cpp  Main.cpp  MainSession.cpp  PrinterFrontend.cpp  PrinterFrontend.h  SDL_Asset.cpp  SDL_Input.cpp  SDL_Path.cpp  SDL_Video.cpp  SDL_Video.h  SerialCommsFrontend.cpp  SerialCommsFrontend.h
tests/: full_keyboard_test.cpp  test_abi.cpp  test_app_args.cpp  test_app_config.cpp  test_app_controller.cpp  test_app_env.cpp  test_disk_abi.cpp  test_disk_abi_c.c  test_disk_config.cpp  test_disk_config_runtime_eject.cpp  test_disk_config_runtime_insert.cpp  test_disk_config_startup.cpp  test_disk_drivers.cpp  test_disk_errors.cpp  test_disk_gcr.cpp  test_disk_integration.cpp  test_disk_motor.cpp  test_disk_prot.cpp  test_disk_savestate.cpp  test_disk_smoke.cpp  test_disk_ui.cpp  test_disk_woz.cpp  test_headless_boot.cpp  test_peripheral_abi.cpp  test_peripheral_abi_c.c  test_program_loader.cpp  test_speaker.cpp  test_ssc.cpp
tests/fixtures/: minimal.woz
